<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HomeBank</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Add a transaction</string>
    <string name="action_settings">Settings</string>
    <string name="dropbox_header">Dropbox Settings</string>
    <string name="dropbox_header_description">Modify the Dropbox Settings</string>
    <string name="title_activity_detailed_card">Details</string>
    <string name="overViewDrawerItem">Overview</string>
    <string name="title_activity_drop_box_file">DropBoxFileActivity</string>
    <string name="all_operations">All</string>
    <string name="payed_operations">Paid</string>
    <string name="unpayed_operation">Unpaid</string>
    <string name="account_type_none">No type</string>
    <string name="account_type_bank">Bank</string>
    <string name="account_type_cash">Cash</string>
    <string name="account_type_asset">Asset</string>
    <string name="account_type_creditCard">Credit card</string>
    <string name="account_type_liability">Liability</string>
    <string name="none">None</string>
    <string name="cleared">Cleared</string>
    <string name="reconciled">Reconciled</string>
    <string name="remind">Remind</string>
    <string name="label">Label</string>
    <string name="wording">Wording</string>
    <string name="amount">Amount</string>
    <string name="payee">Payee</string>
    <string name="category">Category</string>
    <string name="date">Date</string>
    <string name="balance">Balance</string>
    <string name="today">Today</string>
    <string name="future">Future</string>
    <string name="bank">Bank</string>
    <string name="title_activity_about">About</string>
    <string name="hello_world">Hello world!</string>
    <string name="radio_drop">Dropbox file</string>
    <string name="radio_local">Local file</string>
    <string name="About">About</string>
    <string name="Authors">Authors</string>
    <string name="HomeBank">HomeBank</string>

</resources>
