<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/cardLayout_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="start"
            android:orientation="horizontal"
            android:text="@string/date" />

        <TextView
            android:id="@+id/cardLayout_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="0.5"
            android:orientation="horizontal"
            android:text="@string/category" />
    </LinearLayout>

    <TextView
        android:id="@+id/cardLayout_tier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:text="@string/payee" />
    
    <TextView
        android:id="@+id/cardLayout_memo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:text="@string/wording" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
         <TextView
             android:id="@+id/cardLayout_solde"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0.5"
             android:gravity="start"
             android:orientation="horizontal"
             android:text="@string/balance" />

        <TextView
            android:id="@+id/cardLayout_montant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="0.5"
            android:orientation="horizontal"
            android:text="@string/amount" />
    </LinearLayout>

</LinearLayout>