<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/GridLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="3"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.fowlcorp.homebank4android.DetailedCardActivity" >

    <Space
        android:layout_column="2"
        android:layout_gravity="fill_vertical"
        android:layout_row="2" />

    <TextView
        android:id="@+id/detailedCardDateLabel"
        android:layout_column="1"
        android:layout_gravity="start|center_vertical"
        android:layout_row="1"
        android:text="@string/date" />

    <EditText
        android:id="@+id/detailedCardDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_gravity="start|center_vertical"
        android:layout_row="1"
        android:ems="10"
        android:inputType="date" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/detailedCardCategoryLabel"
        android:layout_column="1"
        android:layout_gravity="start|center_vertical"
        android:layout_row="2"
        android:text="@string/category" />

    <AutoCompleteTextView
        android:id="@+id/detailedCardCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_gravity="start|center_vertical"
        android:layout_row="2"
        android:text="AutoCompleteTextView" />

    <TextView
        android:id="@+id/detailedCardPayeeLabel"
        android:layout_column="1"
        android:layout_gravity="start|center_vertical"
        android:layout_row="3"
        android:text="@string/payee" />

    <AutoCompleteTextView
        android:id="@+id/detailedCardPayee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_gravity="start|center_vertical"
        android:layout_row="3"
        android:text="AutoCompleteTextView" />

    <TextView
        android:id="@+id/detailedCardAmountLabel"
        android:layout_column="1"
        android:layout_gravity="start|center_vertical"
        android:layout_row="4"
        android:text="@string/amount" />

    <EditText
        android:id="@+id/detailedCardAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_gravity="start|center_vertical"
        android:layout_row="4"
        android:ems="10"
        android:inputType="numberDecimal" />

    <RadioGroup
        android:id="@+id/detailedCardState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_row="5"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/detailedCardState_none"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/none" />

        <RadioButton
            android:id="@+id/detailedCardState_cleared"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cleared" />

        <RadioButton
            android:id="@+id/detailedCardState_reconciled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reconciled" />

        <RadioButton
            android:id="@+id/detailedCardState_remind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remind" />
    </RadioGroup>

    <TextView
        android:id="@+id/detailedCardWordingLabel"
        android:layout_column="1"
        android:layout_gravity="start|center_vertical"
        android:layout_row="6"
        android:text="@string/wording" />

    <EditText
        android:id="@+id/detailedCardWording"
        android:layout_column="2"
        android:layout_gravity="start|center_vertical"
        android:layout_row="6"
        android:ems="10"
        android:inputType="textAutoCorrect" />

    <TextView
        android:id="@+id/detailedCardInfoLabel"
        android:layout_column="1"
        android:layout_gravity="start|center_vertical"
        android:layout_row="7"
        android:text="@string/label" />

    <EditText
        android:id="@+id/detailedCardInfo"
        android:layout_column="2"
        android:layout_gravity="start|center_vertical"
        android:layout_row="7"
        android:ems="10"
        android:inputType="textAutoCorrect" />

</GridLayout>